--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,2 +1,46 @@
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@700&family=Montserrat:wght@600&family=Space+Mono:wght@400;700&display=swap');
 
+.font-sans {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+.flex {
+    display: flex;
+    padding: 1rem;
+}
+
+.flex-col {
+    flex-direction: column;
+}
+
+.top {
+    font-family: Inconsolata;
+    text-transform: uppercase;
+    letter-spacing: -0.1rem;
+    font-size: 1.7rem;
+    font-weight: 700;
+}
+
+.top > p {
+    margin: 0;
+}
+
+.font-mono {
+    font-family: "Space Mono", Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}
+
+footer {
+    font-family: Montserrat;
+    font-size: 0.9rem;
+    font-weight: 600;
+}
+
+footer a {
+    color: #000000;
+    text-decoration: none;
+}
+
+footer a:hover,
+footer a:focus {
+    border-bottom: 1px solid #000000;
+}
